<resources>
    <string name="app_name">Tests</string>
    <string name="login">ورود</string>
    <string name="phoneNumber">شماره تلفن</string>
    <string name="password">کلمه عبور</string>
    <string name="not_register">هنوز حساب ندارید؟ ثبت نام کنید</string>
    <string name="forget_password">کلمه عبور خود را فراموش کرده اید؟</string>
    <string name="name">نام</string>
    <string name="register">ثبت نام</string>
    <string name="press_back_btn_agian">برای خروج، مجددا دکمه بازگشت را بزنید</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_confirmation_code">کد فعال سازی را وارد کنید</string>
    <string name="confirm_code">کد فعال سازی </string>
    <string name="do_not_recieve_confirm_code">پیامک را دریافت نکردید؟</string>
    <string name="submit">ثبت</string>
</resources>
