<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <!--<ImageView android:src="@drawable/logo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:layout_gravity="center_horizontal" />-->

        <!-- profile-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edt_background"
            android:padding="10dp">

            <com.noori.tests.view.component.EditTextNormal
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/colorAccent"
                android:drawableRight="@drawable/ic_profile"
                android:drawableTint="@color/colorAccent"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <!-- phone Number -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edt_background"
            android:padding="10dp">

            <com.noori.tests.view.component.EditTextNormal
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/colorAccent"
                android:drawableRight="@drawable/ic_mobile_phone"
                android:drawableTint="@color/colorAccent"
                android:gravity="center"
                android:hint="@string/phoneNumber"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <!-- password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edt_background"
            android:padding="10dp">

            <com.noori.tests.view.component.EditTextNormal
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/colorAccent"
                android:drawableRight="@drawable/ic_lock"
                android:drawableTint="@color/colorAccent"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"

                />
        </LinearLayout>

        <com.noori.tests.view.component.ButtonNormal
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_background"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            />


    </LinearLayout>
</ScrollView>